Fixed an issue that could not be compiled with Java 8